fixed home spacing

--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -104,7 +104,7 @@
     }
 }
 
-@media (max-height: 1050px) {
+@media (max-height: 1500px) {
     .space {
         height: 70px;
     }
